<resources>
    <string name="app_name">Weather</string>
    <string name="text1">Weather Forecast</string>
    <string name="text2">Temperature = </string>
    <string name="text4">Wind = </string>
    <string name="text5">Humidity = </string>
    <string name="text7">Write the name of the settlement or select from the list below:</string>
    <string name="button">Search</string>
    <string name="buttonBack">Back</string>
    <string name="item">Item</string>
    <string name="buttonHistory">Weather History</string>
    <string name="sensor">Current Temperature</string>
    <string name="place_not_found">Place not found!</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
</resources>